tests/ui/late-bound-lifetimes/issue-80618.stderr
error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/issue-80618.rs:6:19
   |
LL |     let _ = foo::<'static>;
   |                   ^^^^^^^
   |
note: this may change in the future; see issue #156581 <https://github.com/rust-lang/rust/issues/156581> for more information
  --> $DIR/issue-80618.rs:1:8
   |
LL | fn foo<'a>(x: &'a str) -> &'a str {
   |        ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0794`.
